# ctrl

./: .gitignore  Cargo.toml  README.md  ctrl_std.c  ctrl_std.h  rustfmt.toml
.github/workflows/: rust.yml
examples/: arrays.ctrl  basic.ctrl  fib.ctrl  func_call.ctrl  if.ctrl  if_func_call.ctrl  loops.ctrl  reassign.ctrl  records.ctrl  strings.ctrl  syntax.cl  try_to_break_typechecker.ctrl
src/: _type_checker.rs  cranelift.rs  ir.rs  lex.rs  low_ir.rs  main.rs  parse.rs  type_checker.rs
src/codegen/: ctrl_std.rs  mod.rs  types.rs
