[package]
name = "ctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
cranelift = "0.115.0"
cranelift-module = "0.115.0"
cranelift-native = "0.115.0"
cranelift-object = "0.115.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.9"
